--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   width: 100%;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "helvetica neue", helvetica, arial, sans-serif;
   height: 100vh;
   background: url(close-up-graduate-students-with-gown.jpg);
   background-size: cover;
@@ -97,10 +97,19 @@ input {
   width: 100%;
   padding: 26px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 0.568),
+    rgba(255, 255, 255, 0)
+  );
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   margin: 10px;
   text-align: center;
+  font-family: "Rock Salt", cursive;
+  color: #ffffff;
 }
 #result h1 {
   font-size: 1.2em;
@@ -108,5 +117,34 @@ input {
 }
 #result p {
   margin-bottom: 4px;
-  font-size: 0.9em;
+  font-size: 1rem;
+}
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 3px solid rgb(255, 255, 255);
+}
+
+th:nth-child(1) {
+  width: 30%;
+}
+
+th:nth-child(2) {
+  width: 20%;
+}
+
+th:nth-child(3) {
+  width: 15%;
+}
+
+th:nth-child(4) {
+  width: 35%;
+}
+
+th,
+td {
+  padding: 20px;
+  border: 1px solid;
+  font-weight: bold;
 }
