--- a/result-checker/styles.css
+++ b/result-checker/styles.css
@@ -12,7 +12,24 @@ body {
   background-size: cover;
   background-attachment: fixed;
 }
-
+.btn {
+  color: white;
+  position: absolute;
+  background: black;
+  padding: 10px 20px;
+  border-radius: 5px;
+  top: 10px;
+  left: 10px;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-weight: 800;
+}
+.btn:hover {
+  background: rgb(92, 148, 173);
+  color: black;
+}
 .score-container {
   width: 100%;
   height: 100%;
